Fixed Base 64 encoding problem. Fixed element content encryption. Credit to Werner Dittmann of Siemens.
git-svn-id: https://svn.apache.org/repos/asf/xml/security/trunk@350927 13f79535-47bb-0310-9956-ffa450edef68